# bensz-auto-contribution

./: .dockerignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  Prompts.md  README.md  README.zh-CN.md  pyproject.toml
docs/: bac-tutorial.md  contribution.bac  dockerhub-release.md  pypi-release.md
docs/deploy/: .env.example  .gitignore  README.md  backup-postgres.sh  deploy.sh  docker-compose.yml  logs.sh  restore-postgres.sh
docs/plans/: 2026-05-26-bac-architecture-design.md  2026-05-30-private-anchor.md  2026-05-31-security-hardening-plan.md  2026-06-01-source-laundering-defense.md  2026-06-02-human-prompt-attribution-underrecording-plan.md  2026-06-06-stale-tail-repair-command.md  initial-bac-system.md
server/: Dockerfile  README.md  docker-compose.yml
server/app/: __init__.py  main.py
server/app/core/: __init__.py  config.py
server/app/db/: __init__.py  session.py
server/app/signing/: __init__.py  keys.py
server/tests/: test_anchor_api.py
src/bac/: __init__.py  __main__.py
src/bac/adapters/: cli.py
src/bac/core/: anchor.py  canonicalize.py  container.py  hash_chain.py  schema.py  verify.py
src/bac/report/: inspect.py
src/bac/service/: event_builder.py  evidence.py  redaction.py  repair.py
src/bac/storage/: bac_file.py
tests/: test_anchor_core.py  test_bac_core.py
tools/: backup-postgres.sh  deploy.sh  dockerhub-publish.sh  logs.sh  restore-postgres.sh
