[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bensz-auto-contribution"
version = "1.0.0"
description = "Tamper-evident BAC contribution attribution ledger"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "bensz auto contribution"}
]
dependencies = []

[project.scripts]
bac = "bac.adapters.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
